[project]
authors = [
  {name = "Yukinobu Imai", email = "kotatu.kotatu@gmail.com"},
]
classifiers = [
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Microsoft :: Windows",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
  "material-color-utilities<=0.2.6",
  "pyglet>=2.1.11",
  "pyopengl>=3.1.10",
  "skia-python>=138.0",
]
description = "Intuitive desktop UI framework for Python"
keywords = ["ui", "desktop", "framework", "graphics", "opengl", "skia", "material design"]
license = "Apache-2.0"
license-files = ["LICENSE", "LICENSES/*"]
name = "nuiitivet"
readme = "README.md"
requires-python = ">=3.10"
version = "0.2.2"

[project.urls]
Changelog = "https://github.com/yuksblog/nuiitivet/releases"
Documentation = "https://yuksblog.github.io/nuiitivet/"
Homepage = "https://github.com/yuksblog/nuiitivet"
Issues = "https://github.com/yuksblog/nuiitivet/issues"
Repository = "https://github.com/yuksblog/nuiitivet"

[project.entry-points."pyinstaller40"]
hook-dirs = "nuiitivet._pyinstaller:get_hook_dirs"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
testpaths = ["tests"]

[dependency-groups]
dev = [
  "flake8>=7.0.0",
  "mypy>=1.18.2",
  "pytest>=9.0.1",
  "pytest-asyncio>=1.3.0",
  "types-pyinstaller>=5.1",
]
docs = [
  "mkdocs>=1.5.0",
  "mkdocs-material>=9.5.0",
  "mkdocstrings[python]>=0.24.0",
  "mike>=2.0.0",
]

[tool.mypy]
files = ["src", "tests"]
mypy_path = "stubs"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"nuiitivet" = ["material/symbols/*"]

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0", "wheel"]
